<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.driveswitch.SettingsPersonalActivity"
    tools:showIn="@layout/app_bar_settings_personal">

    <!-- View Title -->
    <TextView
        android:text="Personal Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/colorText"
        android:id="@+id/lblRideshareDriversBestFriend"
        android:textAlignment="center"
        android:textStyle="normal|bold|italic"
        android:textSize="18sp" />

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <!-- Main Container -->
    <ScrollView
        android:id="@+id/mainContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay"
        android:layout_gravity="center">

        <!-- View Content -->
        <LinearLayout
            android:id="@+id/user_form"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/label_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorText"
                android:id="@+id/lblFirstName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/hint_first_name"
                android:background="@drawable/style_edittext_main"
                android:layout_marginTop="5dp"
                android:id="@+id/inpFirstName" />

            <TextView
                android:text="@string/label_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorText"
                android:id="@+id/lblLastName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/hint_last_name"
                android:background="@drawable/style_edittext_main"
                android:layout_marginTop="5dp"
                android:id="@+id/inpLastName" />

            <TextView
                android:text="@string/label_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorText"
                android:id="@+id/lblEmail" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/hint_email_address"
                android:background="@drawable/style_edittext_main"
                android:layout_marginTop="5dp"
                android:id="@+id/inpEmail" />

            <TextView
                android:text="Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorText"
                android:id="@+id/lblPassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="Password"
                android:background="@drawable/style_edittext_main"
                android:layout_marginTop="5dp"
                android:id="@+id/inpPassword" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/action_save"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/style_button_main"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
