<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.driveswitch.RegisterProfileActivity"
    android:weightSum="1">

    <!-- View Title -->
    <TextView
        android:text="Profile Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/colorText"
        android:id="@+id/lblRideshareDriversBestFriend"
        android:textAlignment="center"
        android:textStyle="normal|bold|italic"
        android:textSize="18sp" />

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <!-- Main Container -->
    <ScrollView
        android:id="@+id/mainContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay"
        android:layout_gravity="center">

        <!-- View Content -->
        <LinearLayout
            android:id="@+id/user_form"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/label_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorText"
                android:id="@+id/lblMobileNumber" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:hint="@string/hint_mobile_number"
                android:maxLength="14"
                android:background="@drawable/style_edittext_main"
                android:layout_marginTop="5dp"
                android:id="@+id/inpMobileNumber" />

            <TextView
                android:text="@string/label_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorText"
                android:id="@+id/lblGender" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_spinner_main"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/inpGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_listbox_arrow" />

            </RelativeLayout>

            <TextView
                android:text="@string/label_zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorText"
                android:id="@+id/lblZipCode" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Zipcode"
                android:ems="10"
                android:background="@drawable/style_edittext_main"
                android:layout_marginTop="5dp"
                android:maxLength="5"
                android:id="@+id/inpZipCode" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/label_next"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/style_button_main"
                />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:text="@string/label_cancel"
                android:textAllCaps="false"
                android:textColor="#eb416b"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
