<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.driveswitch.MainActivity">

    <!-- View Title -->
    <TextView
        android:text="A rideshare driver's best friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorText"
        android:id="@+id/lblRideshareDriversBestFriend"
        android:textAlignment="center"
        android:textStyle="normal|bold|italic"
        android:textSize="18sp" />

    <!-- View Version -->
    <TextView
        android:text="Version 1.0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/colorText"
        android:id="@+id/lblVersion"
        android:textAlignment="center"
        android:textStyle="normal"
        android:textSize="14sp" />

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <!-- Main Container -->
    <ScrollView
        android:id="@+id/mainContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay"
        android:layout_gravity="center">

        <!-- View Content -->
        <LinearLayout
            android:id="@+id/user_form"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:hint="@string/label_email_address"
                    android:background="@drawable/style_edittext_main"
                    android:paddingLeft="40dp"
                    android:id="@+id/inpEmail" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_edittext_email" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/label_password"
                    android:background="@drawable/style_edittext_main"
                    android:paddingLeft="40dp"
                    android:id="@+id/inpPassword" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_edittext_password" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/style_button_main"
                />

            <Button
                android:id="@+id/btnForgotPassword"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:text="@string/label_forgot_password"
                android:textColor="#eb416b"
                android:textStyle="bold"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnregister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:text="@string/label_not_registered"
                android:textColor="#eb416b"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
